Add webpack png sprite

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,9 @@
 <body>
     index
     <p id="demo">-</p>
+    <div>
+        <div class="icon-order"></div>
+        <div class="icon-shop"></div>
+    </div>
 </body>
 </html>
